--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,11 +13,11 @@
     />
   </head>
   <body class="d-flex flex-column vh-100">
-    <%- include('./partials/navbar') %>
+    <%- include('../partials/navbar') %>
     <main class="container mt-5">
       <%- include('../partials/flash') %> <%- body %>
     </main>
-    <%- include('./partials/footer') %>
+    <%- include('../partials/footer') %>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
