--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,13 +20,13 @@
       </div>
     </div>
     <div class="navbar-nav ml-auto">
-      <% if(currentUser){ %>
-      <a class="nav-link"> <%= currentUser.username %></a>
+      <!-- <% if(currentUser){ %> -->
+      <!-- <a class="nav-link"> <%= currentUser.username %></a> -->
       <a class="nav-link" href="/logout">Logout</a>
-      <% } else {%>
+      <!-- <% } else {%> -->
       <a class="nav-link" href="/login">Login</a>
       <a class="nav-link" href="/register">Register</a>
-      <% } %>
+      <!-- <% } %> -->
     </div>
   </div>
 </nav>
