--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,9 +20,13 @@
       </div>
     </div>
     <div class="navbar-nav ml-auto">
-      <a class="nav-link" href="/logout">Logout</a>
+      <% if(!locals.currentUser) {%>
       <a class="nav-link" href="/login">Login</a>
       <a class="nav-link" href="/register">Register</a>
+      <% } else {%>
+      <a class="nav-link" href="#"><%= currentUser.username %></a>
+      <a class="nav-link" href="/logout">Logout</a>
+      <% } %>
     </div>
   </div>
 </nav>
