--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,8 +1,8 @@
-<% if(success && success.length) { %>
+<% if(locals.success && locals.success.length) { %>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
   <%= success %>
 </div>
-<% } %> <% if(error && error.length) { %>
+<% } %> <% if(locals.error && locals.error.length) { %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
   <%= error %>
 </div>
