--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,9 +21,12 @@
           <nav class="nav nav-masthead justify-content-center float-md-right">
             <a href="#" class="nav-link active" aria-current="page">Home</a>
             <a href="/campgrounds" class="nav-link">Campgrounds</a>
-
-            <a href="/login" class="nav-link">Login</a>
-            <a href="/register" class="nav-link">Register</a>
+            <% if(currentUser) { %>
+            <a class="nav-link" href="/logout">Logout</a>
+            <% } else { %>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Register</a>
+            <% } %>
           </nav>
         </div>
       </header>
