--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="favicon.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/home.css" />
   </head>
   <body class="d-flex text-center text-white bg-dark">
